# AI-job-board

./: .env.example  .gitignore  ARCHIVED.md  README.md  docker-compose.prod.yml  docker-compose.yml  setup.sh
backend/: Dockerfile  pyproject.toml  requirements.txt  run.py
backend/alembic/: env.py
backend/alembic/versions/: 000_initial_jobs_table.py  001_add_pgvector_and_embeddings.py  002_add_scraping_fields.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: jobs.py  scrape.py  search.py  stats.py
backend/app/services/: fit_analysis_service.py  ingestion_service.py  llm_client.py  scraper_service.py  vector_service.py
backend/scripts/: add_sample_jobs.py  backfill_embeddings.py  db-connect.sh  db-query.sh  db-start.sh  install-playwright-deps.sh  reset_embedding_dimension.py
doc/: DATABASE_SETUP.md  DEPLOYMENT.md  ENV_SETUP.md  INTEGRATION_GUIDE.md
doc/prompts/: Fit-analysis.md  RAG-workflow.md  backend.md  frontend.md
frontend/: Dockerfile  Dockerfile.prod  next.config.js  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: JobInsightCard.tsx
frontend/components/ui/: badge.tsx
nginx/: nginx.conf
